many layout improvements: * dynamic height to suit content * dynamic height fix for iframes * horizontal top nav support in template, with hover menus * improved IE layout (but not too much) * better breadcrumb layout

--- a/src/site/templates/root/css/template.css
+++ b/src/site/templates/root/css/template.css
@@ -8,7 +8,6 @@
 
 .earth {
 	background-color: #b28257;
-	height: 390pt;
 	overflow: visible;
 	z-index: 10;
 	background: #785331 url('../images/dirt.png') repeat-x scroll top;
@@ -16,8 +15,10 @@
 
 .rock {
 	background-color: #bfbfbf;
-	height: 125pt;
+	height: 160pt;
 	background: #bfbfbf url('../images/rock.png') repeat-x scroll top;
+	position: relative;
+	top: -160pt;
 }
 
 /* positioning and styles for main content area */
@@ -35,11 +36,11 @@
 #rootContainer {
   font-family: Arial, sans-serif;
   margin: 0 auto;
-  width: 70%;
+  width: 80%;
   max-width: 120ex;
   z-index: 10;
   position: relative;
-  top: -70pt;
+  top: -75pt;
 
   border: 2pt solid #df9f00;
   border-radius: 27pt;
@@ -49,8 +50,8 @@
 }
 
 #rootHeader {
-  vertical-align: middle;
-  height: 50pt;
+  color: #fff5f5;
+  height: 52pt;
   padding: 5pt 10px;
   background-color: #cf3f5f;
   border-top-right-radius: 10pt;
@@ -62,30 +63,50 @@
   -webkit-border-top-left-radius: 10pt;
 }
 
-#rootHeader h1 {
-  font-size: 50pt;
-  margin: 0;
+#rootHeader a, 
+#rootHeader a:visited, 
+#rootHeader a:hover {
   color: #fff5f5;
-  font-family: "alba", Arial;
+}
+
+#rootHeaderLeft {
+  float: left;
+}
+
+#rootHeader h1 {
+  height: 52pt;
+  display: table-cell;
+  vertical-align: middle;
+  margin: 0;
+  font-family: "alba", Arial, sans-serif;
   font-weight: normal;
   text-transform: lowercase;
 }
 
-#rootHeader h1 a, 
-#rootHeader h1 a:visited, 
-#rootHeader h1 a:hover {
+#rootHeader h1 > a, 
+#rootHeader h1 > a:visited, 
+#rootHeader h1 > a:hover {
   padding-left: 72px;
   background: transparent url('../images/beet.png') no-repeat scroll center left;
   text-decoration: none;
-  color: #fff5f5;
+  height: 50pt;
+  font-size: 50pt;
   line-height: 50pt;
   display: block;
   float: left;
 }
 
+#rootTop {
+  margin: auto;
+  font-size: 90%;
+  height: 52pt;
+  display: table-cell;
+  padding-left: 40pt;
+  vertical-align: middle;
+}
+
 #rootCenter {
   background-color: #fff;
-  height: 365pt;
   border-color: #ffbf00;
   border-width: 15pt 0;
   border-style: solid;
@@ -98,13 +119,11 @@
   min-width: 150px;
   width: 20ex;
   background-color: #efefef;
-  height: 100%;
 }
 
 #rootContent {
-  height: 100%;
-  overflow: auto;
   padding: 0 10pt;
+  border: 2pt solid #df9f00;
 }
 
 #rootFooter {
@@ -113,6 +132,8 @@
   min-height: 40px;
   vertical-align: middle;
 
+  border: 2pt solid #df9f00;
+ 
   background-color: #ffdf90;
   border-bottom-right-radius: 10pt;
   border-bottom-left-radius: 10pt;
@@ -137,12 +158,109 @@
   font-size: x-small;
 }
 
-/* overrides for general content */
+/* top-positioned menu layout */
+#rootTop > .moduletable {
+  padding: 0;
+  margin: 0;
+}
+
+#rootTop > .moduletable > h3 {
+  display: none;
+}
+
+#rootTop > .moduletable > ul.menu {
+  list-style: none;
+  margin: 0;
+}
+
+#rootTop > .moduletable > ul.menu > li {
+  display: inline-block;
+  position: relative;
+}
+
+#rootTop > .moduletable > ul.menu > li > a {
+  padding: 2pt 5pt;
+  display: block;
+  text-decoration: none;
+}
+
+/* nested menu properties */
+#rootTop .parent > ul {
+  display: none;
+  margin: 0;
+  padding: 10pt 10pt 5pt 10pt;
+  list-style: none;
+
+  color: #cf3f5f;
+  background: #fff5f5 url('../images/rgrad.png') repeat-x scroll top;
+
+  border-style: solid;
+  border-width: 0 2pt 2pt 2pt;
+  white-space: nowrap;
+
+  border-bottom-right-radius: 10pt;
+  border-bottom-left-radius: 10pt;
+  
+  -moz-border-radius-bottomleft: 10pt;
+  -moz-border-radius-bottomright: 10pt;
+  -webkit-border-bottom-right-radius: 10pt;
+  -webkit-border-bottom-left-radius: 10pt;
+}
+
+#rootTop .parent ul li {
+  padding-bottom: 5pt;
+}
+
+#rootTop .parent ul a {
+  color: #cf3f5f;
+  text-decoration: none;
+  display: block;
+}
+
+#rootTop .parent a:hover {
+	font-style: italic;
+}
+
+#rootTop .parent:hover {
+  cursor: pointer;
+}
+
+#rootTop .parent:hover > ul {
+  display: block;
+  position: absolute;
+  border-top: 2pt solid;
+  width: 16ex;
+  left: -5ex;
+}
+
+#rootTop .parent:last-child > ul {
+  left: auto;
+  right: -10pt;
+}
+
+/* left-positioned menu */
 
 #rootLeft ul.menu {
   list-style: none;
   padding-left: 10pt;
   white-space: nowrap;
+}
+
+/* overrides for general content */
+
+.breadcrumbs {
+  height: 12pt;
+  position: relative;
+  top: -12pt;
+  overflow: hidden;
+  clear: left;
+  float: left;
+  display: block;
+  width: 100%;
+  margin-left: 72px;
+  padding: 2pt;
+  font-size: small;
+  font-family: Arial, sans-serif;
 }
 
 .componentheading {
@@ -152,7 +270,7 @@
   border-bottom: 2pt solid grey;
 }
 
-.contentheading, h1 {
+.contentheading, h1, h2 {
   font-weight: normal;
   margin-bottom: 0;
 }
@@ -168,20 +286,21 @@
   margin-right: 1em;
 }
 
+.article-content h1 {
+  margin: 0;
+}
+
 /* custom styles for articles */
 
 .leftfloat {
   float: left;
   margin-right: 10pt;
   padding-right: 10pt;
+  border-right: 1pt dotted;
 }
 
 .leftfloat > h2 {
   margin-top: 0;
-}
-
-.article-content h1 {
-  margin: 0;
 }
 
 .dfContactTable {
